Fix grid layout by removing conflicts between padding,margin and grid,grid-gap

--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -3,7 +3,6 @@
   display: grid;
   grid-template-columns: auto 230px;
   grid-template-areas: "main toc";
-  grid-column-gap: 1rem;
 }
 #main {
   display: block;
@@ -14,6 +13,7 @@
   grid-area: toc;
 }
 .toc-box {
+  display: block;
   margin-top: 1.5rem;
   padding: 0.7rem;
 }
